# kinera-template

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/festival/: Cargo.toml
pallets/festival/src/: lib.rs
pallets/movie/: Cargo.toml
pallets/movie/src/: lib.rs
pallets/ranking-list/: Cargo.toml
pallets/ranking-list/src/: lib.rs
pallets/stat-tracker/: Cargo.toml
pallets/stat-tracker/src/: lib.rs
pallets/tags/: Cargo.toml
pallets/tags/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
